--- a/homePage/home.css
+++ b/homePage/home.css
@@ -18,13 +18,15 @@
 	padding: 10px 24px; /*Top/bot ; Right/left*/
 	cursor: pointer;
 	float: left; /*Put the buttons right next to each other*/
-	border-color: rgba(130,130,130,0.5);
 	transition: 0.3s;
 	font-size: 30px;
-	border: none;
 	float: none; /*This keeps the buttons centered*/
-	border-radius: 10px;
 	margin-top: 10px;
+	border: double;
+	border-color: rgb(100,100,100);
+	border-width: 7px;
+	border-radius: 10px;
+	box-shadow: 0 10px 14px 0 rgba(0, 0, 0, 0.3), 0 12px 26px 0 rgba(0, 0, 0, 0.25);
 }
 
 /*Clearfix hack (A bit confused)*/
@@ -38,5 +40,6 @@
 	/*Change the background color when hovering over button*/
 	background-color: rgba(100,100,100,0.6);
 	transition: 0.5s;
-	box-shadow: 0 10px 14px 0 rgba(0, 0, 0, 0.3), 0 12px 26px 0 rgba(0, 0, 0, 0.25);
+	box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.3), 0 14px 28px 0 rgba(0, 0, 0, 0.25);
+	border-color: rgb(200,200,200);
 }
