--- a/drawingsPage/drawings.css
+++ b/drawingsPage/drawings.css
@@ -31,6 +31,8 @@
 	font-family: 'Petit Formal Script', cursive;
 	color: white;
 	text-shadow: 2px 2px 2px #AAA;
+	padding: 2px;
+	font-size: 20px;
 }
 
 .description{
