--- a/drawingsPage/drawings.css
+++ b/drawingsPage/drawings.css
@@ -20,6 +20,7 @@
 	border-width: 7px;
 	box-shadow: 0 10px 14px 0 rgba(0, 0, 0, 0.3), 0 12px 26px 0 rgba(0, 0, 0, 0.25);
 	transition: 0.5s;
+	cursor: pointer;
 }
 
 .img img:hover{
