--- a/drawingsPage/drawings.css
+++ b/drawingsPage/drawings.css
@@ -1,19 +1,19 @@
-.img{
-	transition: 0.5s;
-	background-color: rgba(50,50,50,0.8);
+/*The panel*/
+.panel{
+	background-color: rgba(50,50,50,0.8); /*A semi-transparent grey*/
 	border-radius: 10px;
-	box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.3), 0 8px 22px 0 rgba(0, 0, 0, 0.25);
-	text-align: center;
-	padding-top: 10px;
+	box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.3), 0 8px 22px 0 rgba(0, 0, 0, 0.25); /*A subtle shadow*/
+	text-align: center; /*Make the image centered*/
+	transition: 0.5s; 
 }
 
-
-.img:hover{
-	box-shadow: 0 10px 14px 0 rgba(0, 0, 0, 0.3), 0 12px 26px 0 rgba(0, 0, 0, 0.25);
-	background-color: rgba(60,60,60,0.8);
+.panel:hover{
+	/*Make the shadow bigger when the panel is hovered*/
+	box-shadow: 0 10px 14px 0 rgba(0, 0, 0, 0.3), 0 12px 26px 0 rgba(0, 0, 0, 0.25); 
+	background-color: rgba(60,60,60,0.8); /*Make the panel lighter when the panel is hovered*/
 }
 
-.img img{
+.panel img{
 	border-radius: 10px;
 	border: double;
 	border-color: rgb(100,100,100);
@@ -23,7 +23,7 @@
 	cursor: pointer;
 }
 
-.img img:hover{
+.panel img:hover{
 	border-color: rgb(120,120,120);
 	box-shadow: 0 11px 15px 0 rgba(0, 0, 0, 0.3), 0 13px 27px 0 rgba(0, 0, 0, 0.25);
 }
@@ -40,14 +40,14 @@
 	padding: 15px;
 	text-align: center;
 	color: white;
-	font-family: 'Mada', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 }
 
 .radios{
 	padding: 15px;
 	text-align: left;
 	color: white;
-	font-family: 'Mada', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 }
 
 *{
