--- a/homePage/home.css
+++ b/homePage/home.css
@@ -23,8 +23,8 @@
 	float: none; /*This keeps the buttons centered*/
 	margin-top: 10px;
 	border: double;
-	border-color: rgb(100,100,100);
-	border-width: 7px;
+	border-color: rgba(100,100,100, 0);
+	border-width: 5px;
 	border-radius: 10px;
 	box-shadow: 0 10px 14px 0 rgba(0, 0, 0, 0.3), 0 12px 26px 0 rgba(0, 0, 0, 0.25);
 }
@@ -39,7 +39,6 @@
 .btn-group button:hover{
 	/*Change the background color when hovering over button*/
 	background-color: rgba(100,100,100,0.6);
-	transition: 0.5s;
 	box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.3), 0 14px 28px 0 rgba(0, 0, 0, 0.25);
-	border-color: rgb(200,200,200);
+	border-color: rgb(150,150,150);
 }
