--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ ul.topnav li{
 /*Shows user what page they are on (very subtle)*/
 .active{
 	transition: 0.3s;
-	text-shadow: 2px 2px 2px #AAA;
+	text-shadow: 0px 0px 4px #FFF;
 	color: rgb(255,255,255);
 }
 
