--- a/aboutPage/about.css
+++ b/aboutPage/about.css
@@ -25,7 +25,7 @@
 	text-indent: 50px;
 	font-family: 'Open Sans', sans-serif;
 	font-size: 20px;
-	margin: 0;
+	margin: 10px;
 }
 
 .panel .bioSection{
