--- a/contactPage/contact.css
+++ b/contactPage/contact.css
@@ -32,13 +32,21 @@
 	margin-top: 20px;
 	font-family: 'Open Sans', sans-serif;
 	font-size: 20px;
-	background-color: rgb(70,70,70);
+	background-color: rgba(70,70,70,0.6);
 	box-shadow: 0 10px 14px 0 rgba(0, 0, 0, 0.3), 0 12px 26px 0 rgba(0, 0, 0, 0.25);
 	border: none;
 	border-radius: 10px;
 	padding: 10px;
 	width: 300px;
 	color: white;
+}
+
+.panel input:focus{
+	background-color: rgba(80,80,80,0.6);
+	box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.3), 0 14px 28px 0 rgba(0, 0, 0, 0.25);
+	border-style: double;
+	border-color: rgb(150,150,150);
+	outline: none;
 }
 
 .panel textarea{
@@ -49,7 +57,7 @@
 	margin-top: 20px;
 	font-family: 'Open Sans', sans-serif;
 	font-size: 20px;
-	background-color: rgb(70,70,70);
+	background-color: rgba(70,70,70,0.6);
 	color: white;
 	padding: 10px;
 	border-radius: 10px;
@@ -57,8 +65,12 @@
 	box-shadow: 0 10px 14px 0 rgba(0, 0, 0, 0.3), 0 12px 26px 0 rgba(0, 0, 0, 0.25);
 }
 
-.panel button{
-	margin-top: 20px;
+.panel textarea:focus{
+	background-color: rgba(80,80,80,0.6);
+	box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.3), 0 14px 28px 0 rgba(0, 0, 0, 0.25);
+	border-style: double;
+	border-color: rgb(150,150,150);
+	outline: none;
 }
 
 .panel button{
@@ -68,7 +80,7 @@
 	cursor: pointer;
 	float: left; /*Put the buttons right next to each other*/
 	transition: 0.3s;
-	font-size: 30px;
+	font-size: 24px;
 	float: none; /*This keeps the buttons centered*/
 	margin-top: 20px;
 	border: double;
@@ -108,3 +120,4 @@
 		font-size: 16px;
 	}
 }
+
