--- a/contactPage/contact.css
+++ b/contactPage/contact.css
@@ -78,26 +78,33 @@
 }
 
 .panel button{
-	background-color: rgba(70,70,70,0.8); /*Semi-transparent grey*/
+	background-color: rgba(50,50,50,0.8); /*Semi-transparent grey*/
 	color: white; /*White text*/
 	padding: 10px 24px; /*Top/bot ; Right/left*/
 	cursor: pointer;
 	float: left; /*Put the buttons right next to each other*/
 	transition: 0.3s;
-	font-size: 24px;
-	font-family: 'Petit Formal Script', cursive;
+	font-size: 30px;
 	float: none; /*This keeps the buttons centered*/
-	margin-top: 20px;
+	margin-top: 10px;
 	border: double;
 	border-color: rgba(100,100,100, 0);
-	border-width: 5px;
+	border-width: 7px;
 	border-radius: 10px;
 	box-shadow: 0 10px 14px 0 rgba(0, 0, 0, 0.3), 0 12px 26px 0 rgba(0, 0, 0, 0.25);
+}
+}
+
+/*Clearfix hack (A bit confused)*/
+.panel:after{
+	content: "";
+	clear: both;
+	display: table;
 }
 
 .panel button:hover{
 	/*Change the background color when hovering over button*/
-	background-color: rgba(120,120,120,0.6);
+	background-color: rgba(100,100,100,0.6);
 	box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.3), 0 14px 28px 0 rgba(0, 0, 0, 0.25);
 	border-color: rgb(150,150,150);
 }
@@ -106,17 +113,14 @@
 	.panel p{
 		font-size: 18px;
 	}
-	.panel{
-		margin: 10px 5px;
-	}
 	.panel input{
 		display: flex;
 		box-sizing: border-box;
 		width: 100%;
-		font-size: 12px;
+		font-size: 18px;
 	}
 	.panel textarea{
-		font-size: 12px;
+		font-size: 18px;
 	}
 }
 
