--- a/galleryPage/gallery.css
+++ b/galleryPage/gallery.css
@@ -28,6 +28,10 @@
 	box-shadow: 0 11px 15px 0 rgba(0, 0, 0, 0.3), 0 13px 27px 0 rgba(0, 0, 0, 0.25);
 }
 
+.galleryBody{
+	margin: 14px 4px;
+}
+
 .title{
 	font-family: 'Petit Formal Script', cursive;
 	color: white;
