--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
 	background-image: url(background.jpg);
-	background-color: rgb(94,96,83);
+	background-color: rgb(74,76,63);
 	-webkit-background-size: cover;
   	-moz-background-size: cover;
     -o-background-size: cover;
@@ -15,13 +15,7 @@ h1.webname{
 	color: #FFF; /*Font color*/
 	font-family: 'Petit Formal Script', cursive;
 	text-shadow: 2px 2px 2px #AAA;
-
 	text-align: center;
-	background-color: rgba(50,50,50,0.8); /*Blend in with the navbar*/
-	margin: 0; /*So the webname touches the navbar*/
-	padding: 20px; /*Give some room to the letters*/
-	/*Border radii*/
-	border-radius: 10px 10px 0px 0px;
 }
 
 ul.topnav{
@@ -31,7 +25,8 @@ ul.topnav{
 	overflow: hidden; /*No scroll bars*/
 	background-color: rgba(50,50,50,0.8); /*A dark grey*/
 	/*Border radii*/
-	border-radius: 0px 0px 10px 10px;
+	border-radius: 10px 10px 10px 10px;
+	box-shadow: 0 10px 14px 0 rgba(0, 0, 0, 0.3), 0 12px 26px 0 rgba(0, 0, 0, 0.25);
 }
 
 ul.topnav li{
@@ -59,7 +54,7 @@ ul.topnav li a{
 	/*Make the links pills*/
 	border-radius: 10px;
 	border: double;
-	border-width: 5px;
+	border-width: 7px;
 	border-color: rgba(100,100,100,0);
 }
 
@@ -82,7 +77,7 @@ ul.topnav li.menu{
 		display: none;
 	}
 	ul.topnav li.menu{
-		float: right; /*The menu will be on the very right of the topnav*/
+		float: left; /*The menu will be on the very right of the topnav*/
 		display: inline-block;
 	}
 }
@@ -93,7 +88,6 @@ ul.topnav li.menu{
 		position: relative; /*Positioned relative to its normal position*/
 	}
 	ul.topnav.responsive li.menu{
-		position: absolute; /*Positioned relative to the default position*/
 		right: 0;
 		top: 0;
 	}
