--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,5 @@
 body{
-	background-image: url(background.jpg);
+	background-image: url(../background.jpg);
 	background-color: rgb(74,76,63);
 	-webkit-background-size: cover;
   	-moz-background-size: cover;
