--- a/resources/css/gallery.css
+++ b/resources/css/gallery.css
@@ -28,6 +28,10 @@
 	box-shadow: 0 11px 15px 0 rgba(0, 0, 0, 0.3), 0 13px 27px 0 rgba(0, 0, 0, 0.25);
 }
 
+.panel a{
+	color: white;
+}
+
 .galleryBody{
 	margin: 14px 4px;
 }
