Changed background color

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,6 +1,6 @@
 body{
 	background-image: url(../background.jpg);
-	background-color: rgb(74,76,63);
+	background-color: rgb(10, 10, 10);
 	-webkit-background-size: cover;
   	-moz-background-size: cover;
     -o-background-size: cover;
