Fixed css and nav links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
 <head>
 	<title>{{ page.title }}</title>
-	<link rel="stylesheet" type="text/css" href="/css/main.css">
+	<link rel="stylesheet" type="text/css" href="/gerry-minors-fine-art/css/main.css">
 </head>
 <body>
 	<nav>
 	<ul>
-		<li><a href="/">Home</a></li>
-		<li><a href="/gallery/">Gallery</a></li>
-		<li><a href="/about/">About</a></li>
+		<li><a href="/gerry-minors-fine-art/">Home</a></li>
+		<li><a href="/gerry-minors-fine-art/gallery/">Gallery</a></li>
+		<li><a href="/gerry-minors-fine-art/about/">About</a></li>
 	</ul>
 	</nav>
 
@@ -20,7 +19,7 @@
 
 	<footer>
 	<ul>
-		<li><a href="mailto:gerryminor@sbcglobal.net <gerryminor@sbcglobal.net>;">email me</a></li>
+		<li><a href="mailto:gerryminor@sbcglobal.net">email me</a></li>
 	</ul>
 	</footer>
 </body>
