--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,10 @@
 body {
 	background-color: #111;
-	background-image: url("../background.jpg");
+	background-image: url("background.jpg");
+}
+
+h1 {
+	color: #FFF;
 }
 
 nav ul, footer ul {
@@ -16,6 +20,7 @@ nav ul li, footer ul li {
 }
 
 footer {
+	bottom: 0;
 	margin-top: 20px;
 	border-top: 1px solid #FFF;
 	font-size: 1em;
