--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,9 +2,12 @@
 <html>
 <head>
 	<title>{{ page.title }}</title>
+	<link href="https://fonts.googleapis.com/css?family=Lora|Satisfy" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="/gerry-minors-fine-art/css/main.css">
 </head>
 <body>
+	<h1>Gerry Minor's Fine Art</h1>
+
 	<nav>
 	<ul>
 		<li><a href="/gerry-minors-fine-art/">Home</a></li>
