--- a/css/main.css
+++ b/css/main.css
@@ -1,20 +1,21 @@
 body {
 	background-color: #111;
 	background-image: url("background.jpg");
+	font-family: 'Lora', serif;
 }
 
 h1 {
+	font-family: 'Satisfy', cursive;
 	color: #FFF;
 }
 
 nav ul, footer ul {
-  	/*font-family: 'Open Sans', 'Helvetica', 'Arial', 'Sans-Serif';*/
   	padding: 0px;
   	list-style: none;
   	font-weight: bold;
 }
 
-nav ul li, footer ul li {
+nav ul li {
   	display: inline;
   	margin-right: 20px;
 }
