--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="/gerry-minors-fine-art/css/main.css">
 </head>
 <body>
-	<h1>Gerry Minor's Fine Art</h1>
+	<h1 class="title">Gerry Minor's Fine Art</h1>
 
 	<nav>
 	<ul>
