--- a/css/main.css
+++ b/css/main.css
@@ -5,30 +5,31 @@ body {
 }
 
 .title {
-	font-size: 4em;
+	font-size: 3.5em;
 	text-align: center;
 }
 
 h1 {
 	font-family: 'Satisfy', cursive;
-	color: #FFF;
+	color: white;
 }
 
 a {
 	text-decoration: none;
-	color: #FFF;
+	color: white;
 }
 
 a:hover {
 	text-decoration: underline;
-	color: #FFDF11;
+	color: #f07742;
 }
 
 nav ul {
+	text-align: center;
   	padding: 0px;
   	list-style: none;
   	font-weight: bold;
-  	font-size: 2em;
+  	font-size: 1.5em;
 }
 
 nav ul li {
