--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,8 @@ body {
 	background-color: #101638;
 	background-image: url("background.jpg");
 	background-size: cover;
+	background-repeat: no-repeat;
+	
 	font-family: 'Lora', serif;
 }
 
