--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,9 @@
 body {
 	background-color: #101638;
 	background-image: url("background.jpg");
-	background-size: cover;
+	background-size: 100% 100%;
 	background-repeat: no-repeat;
-	
+
 	font-family: 'Lora', serif;
 }
 
