--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,12 @@
 body {
 	background-color: #101638;
 	background-image: url("background.jpg");
-	background-size: 100% 100%;
-	background-repeat: no-repeat;
+	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 
 	font-family: 'Lora', serif;
 }
