--- a/resources/css/gallery.css
+++ b/resources/css/gallery.css
@@ -1,5 +1,15 @@
+.grid-container{
+	display: grid;
+	grid-gap: 20px;
+	grid-template-columns: auto auto auto auto;
+}
+
 /*The panel*/
 .panel{
+/*	padding: 6px 6px;
+	float: left;
+	width: 24.99999%;*/
+
 	background-color: rgba(50,50,50,0.8); /*A semi-transparent grey*/
 	border-radius: 10px;
 	box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.3), 0 8px 22px 0 rgba(0, 0, 0, 0.25); /*A subtle shadow*/
@@ -35,10 +45,6 @@
 	text-decoration: none;
 }
 
-.galleryBody{
-	margin: 14px 4px;
-}
-
 .title{
 	font-family: 'Petit Formal Script', cursive;
 	color: white;
@@ -54,38 +60,29 @@
 	font-family: 'Open Sans', sans-serif;
 }
 
-.radios{
-	padding-bottom: 10px;
-	text-align: left;
-	color: white;
+/*Search Box*/
+#searchBox{
+	margin: 20px;
 	font-family: 'Open Sans', sans-serif;
-	display: inline-block;
 	font-size: 20px;
+	background-color: rgba(70,70,70,0.6);
+	box-shadow: 0 10px 14px 0 rgba(0, 0, 0, 0.3), 0 12px 26px 0 rgba(0, 0, 0, 0.25);
+	padding: 10px;
+	width: 50%;
+	color: white;
+	border: double;
+	border-color: rgb(100,100,100);
+	border-width: 7px;
+	border-radius: 10px;
+	transition: 0.5s;
 }
 
-*{
-	box-sizing: border-box;
+#searchBox:focus{
+	background-color: rgba(80,80,80,0.6);
+	border-color: rgb(120,120,120);
+	box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.3), 0 14px 28px 0 rgba(0, 0, 0, 0.25);
+	outline: none;
 }
-
-.responsive{
-	padding: 6px 6px;
-	float: left;
-	width: 24.99999%;
-}
-
-@media only screen and (max-width: 1200px){
-	.responsive{
-		width: 49.99999%;
-		margin: 6px 0;
-	}
-}
-
-@media only screen and (max-width: 650px){
-	.responsive{
-		width: 100%;
-	}
-}
-
 
 /*Picture Viewer*/
 .overlay{
@@ -130,23 +127,51 @@
 	color: rgb(200,200,200);
 }
 
-/*Filter*/
-.all{
-	display: initial;
+#backToTop{
+	position: absolute;
+	text-decoration: none;
+
+	margin: 20px;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 20px;
+	background-color: rgba(70,70,70,0.6);
+	box-shadow: 0 10px 14px 0 rgba(0, 0, 0, 0.3), 0 12px 26px 0 rgba(0, 0, 0, 0.25);
+	padding: 10px;
+	color: white;
+	border: double;
+	border-color: rgb(100,100,100);
+	border-width: 7px;
+	border-radius: 10px;
+	transition: 0.5s;
 }
 
-.oil{
-
+#backToTop:hover{
+	background-color: rgba(80,80,80,0.6);
+	border-color: rgb(120,120,120);
+	box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.3), 0 14px 28px 0 rgba(0, 0, 0, 0.25);
 }
 
-.pencil{
-
+@media only screen and (max-width: 1200px){
+	.grid-container{
+		grid-gap: 15px;
+		grid-template-columns: auto auto auto;
+	}
 }
 
-.penInk{
-
+@media only screen and (max-width: 900px){
+	.grid-container{
+		grid-gap: 10px;
+		grid-template-columns: auto auto;
+	}
 }
 
-.other{
-	
+@media only screen and (max-width: 650px){
+	.grid-container{
+		grid-gap: 5px;
+		grid-template-columns: auto;
+	}
+
+	#searchBox{
+		width: 70%;
+	}
 }
