--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body{
-	background-image: url(../background.jpg);
+	background-image: url(background.jpg);
 	background-color: rgb(10, 10, 10);
 	-webkit-background-size: cover;
   	-moz-background-size: cover;
