--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,12 +8,15 @@
 	</head>
 	<body>
 		<nav>
-    		<ul>
-    			<li><a href="/">Home</a></li>
+			<ul>
+				<a href="/" style="text-decoration: none;">
+					<h1 class="webname">Gerry Minor's Fine Art</h1>
+				</a>
+				<li><a href="/">Home</a></li>
 				<li><a href="/gallery/">Gallery</a></li>
 				<li><a href="/about/">About</a></li>
 				<li><a href="/contact/">Contact</a></li>
-    		</ul>
+			</ul>
 		</nav>
 		<div class="container">
 			{{ content }}
