fixed nav links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,13 +9,13 @@
 	<body>
 		<nav>
 			<ul>
-				<a href="/" style="text-decoration: none;">
+				<a href="{{ site.baseurl }}/" style="text-decoration: none;">
 					<h1 class="webname">Gerry Minor's Fine Art</h1>
 				</a>
-				<li><a href="/">Home</a></li>
-				<li><a href="/gallery/">Gallery</a></li>
-				<li><a href="/about/">About</a></li>
-				<li><a href="/contact/">Contact</a></li>
+				<li><a href="{{ site.baseurl }}/">Home</a></li>
+				<li><a href="{{ site.baseurl }}/gallery/">Gallery</a></li>
+				<li><a href="{{ site.baseurl }}/about/">About</a></li>
+				<li><a href="{{ site.baseurl }}/contact/">Contact</a></li>
 			</ul>
 		</nav>
 		<div class="container">
