--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
 		<title>{{ page.title }}</title>
 		<link href="https://fonts.googleapis.com/css?family=Petit+Formal+Script|Open+Sans:800" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/main.css">
+		<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}{{ page.css }}">
 		<link rel="icon" type="image/png" href="{{ site.baseurl }}/favicon.png">
 	</head>
 	<body>
