--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,11 @@
 		<title>{{ page.title }}</title>
 		<link href="https://fonts.googleapis.com/css?family=Petit+Formal+Script|Open+Sans:800" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/main.css">
-		<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}{{ page.css }}">
 		<link rel="icon" type="image/png" href="{{ site.baseurl }}/favicon.png">
+
+		{% if page.css %}
+		<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/{{ page.css }}">
+		{% endif %}
 	</head>
 	<body>
 		<nav>
@@ -26,4 +29,5 @@
 
 		</footer>
 	</body>
+	
 </html>
