--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Petit+Formal+Script|Open+Sans:800" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/main.css">
 		<link rel="icon" type="image/png" href="{{ site.baseurl }}/favicon.png">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		{% if page.css %}
 			<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/{{ page.css }}">
