--- a/gallery/gallery.css
+++ b/gallery/gallery.css
@@ -84,7 +84,7 @@
 	outline: none;
 }
 
-.viewButton{
+#viewButton{
 	font-size: 17px;
 	font-family: 'Open Sans', sans-serif;
 	color: rgb(200,200,200);
@@ -101,7 +101,7 @@
 	border-color: rgba(100,100,100,0);
 }
 
-.viewButton:hover{
+#viewButton:hover{
 	background-color: rgba(130,130,130,0.5);
 	box-shadow: 0 10px 14px 0 rgba(0, 0, 0, 0.3), 0 12px 26px 0 rgba(0, 0, 0, 0.25);
 	border-color: rgb(150,150,150);
