--- a/gallery/gallery.css
+++ b/gallery/gallery.css
@@ -91,14 +91,15 @@
 	text-align: center;
 	text-decoration: none;
 
-	padding: 14px 16px;
+	padding: 7px 12px;
 	margin: 2px;
 	transition: 0.4s;
 
+	background-color: rgba(130,130,130,0.5);
 	border-radius: 10px;
 	border: double;
 	border-width: 7px;
-	border-color: rgba(100,100,100,0);
+	border-color: rgba(100,100,100,50);
 }
 
 #viewButton:hover{
