--- a/gallery/gallery.css
+++ b/gallery/gallery.css
@@ -90,16 +90,17 @@
 	color: rgb(200,200,200);
 	text-align: center;
 	text-decoration: none;
+	cursor: pointer;
 
-	padding: 7px 12px;
-	margin: 2px;
+	padding: 5px 14px;
+	margin: 4px;
 	transition: 0.4s;
 
-	background-color: rgba(130,130,130,0.5);
+	background-color: rgba(130,130,130,0.1);
 	border-radius: 10px;
 	border: double;
 	border-width: 7px;
-	border-color: rgba(100,100,100,50);
+	border-color: rgba(150,150,150,50);
 }
 
 #viewButton:hover{
