--- a/gallery/gallery.css
+++ b/gallery/gallery.css
@@ -92,21 +92,20 @@
 	text-decoration: none;
 	cursor: pointer;
 
-	padding: 5px 14px;
-	margin: 4px;
+	padding: 3px 16px;
 	transition: 0.4s;
 
-	background-color: rgba(130,130,130,0.1);
+	background-color: rgba(130,130,130,0.2);
 	border-radius: 10px;
 	border: double;
 	border-width: 7px;
-	border-color: rgba(150,150,150,50);
+	border-color: rgb(100,100,100);
 }
 
 #viewButton:hover{
 	background-color: rgba(130,130,130,0.5);
-	box-shadow: 0 10px 14px 0 rgba(0, 0, 0, 0.3), 0 12px 26px 0 rgba(0, 0, 0, 0.25);
-	border-color: rgb(150,150,150);
+	/*box-shadow: 0 10px 14px 0 rgba(0, 0, 0, 0.3), 0 12px 26px 0 rgba(0, 0, 0, 0.25);*/
+	border-color: rgb(120,120,120);
 }
 
 /*Picture Viewer*/
