--- a/about/about.css
+++ b/about/about.css
@@ -1,3 +1,11 @@
+#gerryminor img{
+	border-radius: 10px;
+	border: double;
+	border-color: rgb(100,100,100);
+	border-width: 7px;
+	box-shadow: 0 10px 14px 0 rgba(0, 0, 0, 0.3), 0 12px 26px 0 rgba(0, 0, 0, 0.25);
+}
+
 .panel{
 	color: white;
 	background-color: rgb(50,50,50);
