--- a/about/about.css
+++ b/about/about.css
@@ -6,6 +6,11 @@ img{
 	box-shadow: 0 10px 14px 0 rgba(0, 0, 0, 0.3), 0 12px 26px 0 rgba(0, 0, 0, 0.25);
 }
 
+#gerryMinorPhoto{
+	float: left;
+	width: 150px;
+}
+
 .panel{
 	color: white;
 	background-color: rgb(50,50,50);
