--- a/about/about.css
+++ b/about/about.css
@@ -1,14 +1,12 @@
 img{
+	float: left;
+	width: 150px;
+	margin: 20px;
 	border-radius: 10px;
 	border: double;
 	border-color: rgb(100,100,100);
 	border-width: 7px;
 	box-shadow: 0 10px 14px 0 rgba(0, 0, 0, 0.3), 0 12px 26px 0 rgba(0, 0, 0, 0.25);
-}
-
-#gerryMinorPhoto{
-	float: left;
-	width: 150px;
 }
 
 .panel{
