--- a/css/main.css
+++ b/css/main.css
@@ -57,12 +57,16 @@ nav ul li a{
 	padding: 14px 16px;
 	text-decoration: none;
 	margin: 2px;
-	transition: 0.4s;
+	transition: 0.3s;
 
 	border-radius: 10px;
 	border: double;
 	border-width: 7px;
 	border-color: rgba(100,100,100,0);
+}
+
+nav ul li .active{
+	text-shadow: 0px 0px 6px #AAA;
 }
 
 nav ul li a:hover{
